2009-12-07  vadim  <vadim@vk.crocodile.org>

	* instDialog_ui_ops.cpp (instDialog::getInstOptions): fixed bug
	#2908220 (fwbuilder bug #803): "Running fwbuilder as root
	hardcodes batch install user".  Built-in installer ignored user
	name entered in the installer options dialog and communicated with
	the firewall using the name of the user running the program.

2009-12-04  vadim  <vadim@vk.crocodile.org>

	* ../src/res/platform/pf.xml, iptables.xml: unified terminology
	for policy rule actions that create branching in the rule set or
	tag packets. Now we call these actions "Branch" and "Tag" for all
	platforms. Before, the name was different and matched original
	action on each platform, that is for PF it was "Anchor" and "Tag"
	and for iptables "Chain" and "Mark" respectively.

2009-12-01  vadim  <vadim@vk.crocodile.org>

	* src/res/configlets/linux24/run_time_wrappers: fixed #651:
	"support for dynamic ipv6 addresses is broken". When an interface
	with dynamic address was used in a rule in IPv6 rule set,
	generated shell script was supposed to read its IPV6 address and
	use it in the rule. This code was broken and never worked
	properly. Implemented idea for getaddr6 code suggested by
	<j.kammer@eurodata.de>, it now reads all IPv6 addresses of the
	interface and uses them in the rule via shell "for"
	loop. Implemented the same change for IPv4 as well. This changes
	behavior of the generated iptables script compared to fwbuilder v2
	and v3 where it only used the first IPv4 address of the dynamic
	interface. In v3.1 and v4 it will use all addresses of such
	interface.

2009-11-29  vadim  <vadim@vk.crocodile.org>

	* newClusterDialog.cpp (newClusterDialog::finishClicked): New
	feature: the wizard that creates new cluster object starts with
	the list of firewall objects where the user can choose which
	firewalls should become members of the cluster. Next, the program
	finds interfaces of the member firewalls that have the same name