@@ -155,6 +155,14 @@ data file and repairs it if necessary.
           -f file.fwb: data file
 
 
+.B merge -f file1.fwb -i file2.fwb
+
+Objects from the file2.fwb are merged with objects in file1 and
+combined object tree saved in file1.fwb
+
+          -f file.fwb: data file #1
+          -i file.fwb: data file #2
+
 
 .SH ATTRIBUTES FOR THE NEW OBJECTS, BY TYPE
 .PP
