@@ -490,3 +490,13 @@ rule sets of this object rather than in the actual firewalls.
 <p>
   Added support for option "--random" in SNAT rules
 </p>
+
+
+<a name="fwbedit"></a>
+<h2>Changes in the command linbe tool fwbedit</h2>
+
+<p>
+  User can now <b>merge objects from two data files</b> together using
+  command line tool <b>fwbedit</b> just like the "Import library"
+  function in the GUI.
+</p>
